--- a/src/main/resources/templates/fragments/user/list.html
+++ b/src/main/resources/templates/fragments/user/list.html
@@ -21,15 +21,21 @@
             </div>
         </div>
         <div class="divTableBody">
-            <div class="divTableRow" th:each="user : ${users}">
+            <div class="divTableRow" th:each="user : ${users}" th:id="|user_${user.id}|">
                 <div class="divTableCell"><th:block th:text="${user.id}"/></div>
                 <div class="divTableCell"><th:block th:text="${user.email}"/></div>
                 <div class="divTableCell"><th:block th:text="${user.password}"/></div>
                 <div class="divTableCell" th:id="|lockDate_${user.id}|"><th:block th:text="${user.lockDate}"/></div>
                 <div class="divTableCell"><th:block th:text="${user.dateLastConnection}"/></div>
                 <th:block th:replace="~{fragments/auditory/detail::detailList(${user.auditory})}"/>
-                <div class="divTableCell"><input type="button" th:value="#{user.detail.lockUser}" th:onclick="|lockUserByList(${user.id})|"/></div>
-                <div class="divTableCell"><input type="button" th:value="#{user.detail.unlockUser}" th:onclick="|unlockUserByList(${user.id})|"/></div>
+                <div class="divTableCell">
+                    <input type="button" th:value="#{user.detail.lockUser}" th:onclick="|lockUserByList(${user.id})|"/>
+                    <input type="button" th:value="#{user.detail.unlockUser}" th:onclick="|unlockUserByList(${user.id})|"/>
+                </div>
+                <div class="divTableCell">
+                    <input type="button" th:value="#{user.detail.removeUser}" th:onclick="|removeUserByList(${user.id})|"/>
+                    <input type="button" th:value="#{user.detail.recoverUser}" th:onclick="|recoverUserByList(${user.id})|"/>
+                </div>
             </div>
         </div>
     </div>
