--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -11,5 +11,7 @@
 <section th:replace="~{fragments/layout/section}" />
 
 <footer th:replace="~{fragments/layout/footer}" />
+
+<div th:text="${idSession}"/>
 </body>
 </html>
